# rust-mpi-tool-support

./: .gitignore  Cargo.toml  Changelog.md  README.md
app/: Cargo.toml
app/C_app/: Makefile  test_app  test_app.c
app/mpi-test-app/: Cargo.toml  build.rs
app/mpi-test-app/src/: main.rs
app/pmpi-test-app/: Cargo.toml  build.rs
app/pmpi-test-app/src/: main.rs
app/qmpi-test-app/: Cargo.toml
app/qmpi-test-app/src/: main.rs
mpi-sys/: Cargo.toml  build.rs
mpi-sys/src/: lib.rs
mpi-test-app/: Cargo.toml  build.rs
mpi-test-app/src/: main.rs
qmpi-sys/: .gitignore  Cargo.toml  build.rs
qmpi-sys/src/: lib.rs
qmpi-test-tool/: Cargo.toml
qmpi-test-tool/src/: lib.rs
qmpi-tool-creator/: Cargo.toml  build.rs
qmpi-tool-creator/src/: install.rs  interception_names.rs  layer.rs  lib.rs
qmpi-tool-creator/type_convert/: .gitignore  convert.py  patterns.py  utility.py
sys/: Cargo.toml
sys/cnum/: Cargo.toml  build.rs
sys/cnum/src/: lib.rs
sys/mpi-sys/: Cargo.toml  build.rs
sys/mpi-sys/src/: lib.rs  mpi_include.h
sys/mpi_func-id/: Cargo.toml
sys/mpi_func-id/src/: lib.rs
sys/qmpi-sys/: Cargo.toml  build.rs
sys/qmpi-sys/src/: lib.rs
sys/rmpi/: Cargo.toml
sys/rmpi/src/: buffer.rs  communicator.rs  context.rs  datatype.rs  error.rs  group.rs  lib.rs  lib_mode_dependent.rs  mpi_op.rs  process.rs  request.rs  status.rs  tag.rs
sys/rmpi/src/buffer/: dynamic.rs  interface.rs  kind.rs  mod.rs
sys/rmpi/src/communicator/: allgather.rs  allreduce.rs  alltoall.rs  barrier.rs  create_subset.rs  mod.rs  scan.rs
sys/rmpi/src/process/: bcast.rs  gather.rs  irecv.rs  isend.rs  mod.rs  recv.rs  reduce.rs  scatter.rs  send.rs  sendrecv.rs
sys/tool_mpi-macro/: Cargo.toml
sys/tool_mpi-macro/src/: arg_line.rs  lib.rs
tool/: Cargo.toml
tool/mpi-test-tool/: Cargo.toml
tool/mpi-test-tool/src/: lib.rs
tool/mpi-test-tool2/: Cargo.toml
tool/mpi-test-tool2/src/: lib.rs
tool/mpi-tool-bandwith_recorder/: Cargo.toml
tool/mpi-tool-bandwith_recorder/src/: lib.rs
tool/mpi-tool-creator/: Cargo.toml
tool/mpi-tool-creator/src/: layer.rs  lib.rs  pmpi_layer.rs
tool/mpi-tool-creator/type_convert/: convert.py  convert2.py  input.txt  input2.txt  utility.py
tool/mpi-tool-empty-pmpi/: Cargo.toml
tool/mpi-tool-empty-pmpi/src/: lib.rs
tool/mpi-tool-empty-qmpi/: Cargo.toml
tool/mpi-tool-empty-qmpi/src/: lib.rs
tool/mpi-tool-empty_raw-pmpi/: Cargo.toml
tool/mpi-tool-empty_raw-pmpi/src/: lib.rs
tool/mpi-tool-empty_raw-qmpi/: Cargo.toml
tool/mpi-tool-empty_raw-qmpi/src/: lib.rs
tool/mpi-tool-function_counter/: Cargo.toml
tool/mpi-tool-function_counter/src/: counter_array.rs  lib.rs
tool/mpi-tool-layer/: Cargo.toml
tool/mpi-tool-layer/src/: layer.rs  lib.rs  raw_layer.rs  todo_trait_fns.rs  unsafe_box.rs
tool/mpi-tool-layer/src/layer/: limpl.rs  ltrait.rs  mod.rs
tool/mpi-tool-layer/tests/: layer_consistency.rs
tool/pmpi-tool-creator/: Cargo.toml
tool/pmpi-tool-creator/src/: lib.rs  pmpi_layer.rs
tool/qmpi-tool-creator/: Cargo.toml
tool/qmpi-tool-creator/src/: lib.rs
tool/qmpi-tool-creator/src/qmpi_layer/: install.rs  interception_names.rs  mod.rs
tool/type_convert/: .gitignore  convert.py  convert2.py  patterns2.py
tool/type_convert/old/: convert.py  patterns.py
