[package]
name = "qmpi-sys"
version = "0.1.0"
authors = ["Matthias Kübrich <matthias.kuebrich@tum.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi-sys = { path = "../mpi-sys", features = ["link_mpi"] }

[build-dependencies]
bindgen = "*"
hyper = "*"
hyper-rustls = "*"
tokio = { version = "*", features = ["full"] }
cc = { version = "*", optional = true }

[features]
bundled = ["cc"]
