[package]
name = "qmpi-test-tool"
version = "0.1.0"
authors = ["Matthias Kübrich <matthias.kuebrich@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
qmpi-tool-creator = { path = "../qmpi-tool-creator" }
