[package]
name = "mpi-test-app"
version = "0.1.0"
authors = ["Matthias Kübrich <matthias.kuebrich@tum.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmpi-sys = { path = "../../sys/qmpi-sys", features = ["bundled", "export_mpi", "link_mpi"], optional = true }
mpi-sys = { path = "../../sys/mpi-sys", features = ["mpi_functions", "link_mpi"], optional = true }

[features]
default = ["link_mpi_test_tool"]
link_qmpi = ["qmpi-sys"]
link_mpi_test_tool = ["mpi-sys"]
