[package]
name = "qmpi-test-app"
version = "0.1.0"
authors = ["Matthias Kübrich <matthias.kuebrich@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmpi-sys = { path = "../../sys/qmpi-sys", features = ["bundled", "export_mpi"] }
