[package]
name = "mpi_func-id"
version = "0.1.0"
authors = ["Matthias Kübrich <matthias.kuebrich@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# possibly unlinked qmpi-sys
qmpi-sys = { path = "../qmpi-sys", default-features = false }