[package]
name = "qmpi-sys"
version = "0.1.0"
authors = ["Matthias Kübrich <matthias.kuebrich@tum.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi-sys = { path = "../mpi-sys", optional = true }

[build-dependencies]
bindgen = "0.57"
hyper = { version = "0.13", optional = true }
hyper-rustls = { version = "0.21", optional = true }
tokio = { version = "0.2", features = ["full"] }
cc = { version = "1.0", optional = true }

[features]
default = ["link_qmpi"]

export_mpi = ["mpi-sys"]
# compile qmpi from git repository
bundled = [
    "cc", "mpi-sys", "mpi-sys/mpi_functions", "hyper", "hyper-rustls",
    "use_git_header", "link_qmpi"
]
# use git qmpi header
use_git_header = ["hyper", "hyper-rustls"]
tool_mode = ["mpi-sys", "mpi-sys/mpi_functions", "mpi-sys/tool_mode"]
link_qmpi = []