[package]
name = "rmpi"
version = "0.1.0"
authors = ["Matthias Kübrich <matthias.kuebrich@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi-sys = { path = "../mpi-sys", features = ["mpi_functions"] }
cnum = { path = "../cnum" }

[features]
# link against mpi and therefore expose all mpi functions
link_mpi = ["mpi-sys/link_mpi"]
# remap PMPI_* functions as MPI_*
tool_mode = ["mpi-sys/tool_mode"]