[package]
name = "mpi-test-tool"
version = "0.1.0"
authors = ["Matthias Kübrich <matthias.kuebrich@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mpi-tool-creator = { path = "../mpi-tool-creator" }

[features]
qmpi_mode = ["mpi-tool-creator/qmpi_mode"]
pmpi_mode = ["mpi-tool-creator/pmpi_mode"]
