[package]
name = "mpi-tool-empty_raw-pmpi"
version = "0.1.0"
authors = ["Matthias Kübrich <matthias.kuebrich@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pmpi-tool-creator = { path = "../pmpi-tool-creator" }
mpi-tool-layer = { path = "../mpi-tool-layer" }
