[package]
name = "mpi-tool-layer"
version = "0.1.0"
authors = ["Matthias Kübrich <matthias.kuebrich@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mpi-sys = { path = "../../sys/mpi-sys", features = [] }
rmpi = { path = "../../sys/rmpi", features = ["tool_mode"], optional = true }

[features]
rmpi_support = ["rmpi"]
