[package]
name = "qmpi-tool-creator"
version = "0.1.0"
authors = ["Matthias Kübrich <matthias.kuebrich@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# QMPI_Table_query and vector_get are double linked ("bundled" should not be here, but Rust can't do any better)
qmpi-sys = { path = "../../sys/qmpi-sys", features = ["export_mpi", "bundled", "tool_mode"] }
mpi-tool-layer = { path = "../mpi-tool-layer" }
